    effect of crash during parsing of the config file.
  * Introduced fwcheck option to verify consistency of the
    chains. Implemented automatic restart of fail2ban main function in
    case if check of fwban or fwban command failed (closes: #329163, #331695).
    (Introduced patch was further adjusted by upstream author)
  * Added -f command line parameter for [findtime]
  * Fixing the issue of not respecting command line parameters
  
 -- Yaroslav Halchenko <debian@onerussian.com>  Mon,  3 Oct 2005 22:26:28 -1000

fail2ban (0.5.4-5) unstable; urgency=low

  * Made failregex'es more specific to don't allow usernames to be used as a
    tool for denial of service attacks. Config files (or at least
    failregex'es) must be updated from this package, otherwise the security
    breach would remain open and only warning gets issued (closes: #330827)

 -- Yaroslav Halchenko <debian@onerussian.com>  Sat,  1 Oct 2005 02:42:23 -1000

fail2ban (0.5.4-4) unstable; urgency=low

  * On a request from Calum Mackay added reporting of the enabled sections

 -- Yaroslav Halchenko <debian@onerussian.com>  Thu, 29 Sep 2005 11:20:43 -1000

fail2ban (0.5.4-3) unstable; urgency=low

  * Resolved the mistery of debug mode in which commands are not really
    executed: added verbose option to config file, removed -v from
    /etc/default/fail2ban, reordered code a bit so that log targets are
    setup right after background and then only loglevel (verbose,debug) is
    processed, so the warning could be seen in the logs

 -- Yaroslav Halchenko <debian@onerussian.com>  Thu, 29 Sep 2005 00:20:43 -1000

fail2ban (0.5.4-2) unstable; urgency=low

  * Now exporting PATH explicitely in init.d/fail2ban script, to avoid
    problems finding iptables in the cases when PATH was not exported outside
    (cfengine, broken shell environment) (closes: #329304)
  * Removed -b from start-stop-daemon because fail2ban detahes on its own